--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "iview": "^3.4.2",
     "jquery": "^3.4.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuetify": "^2.2.27"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
